--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,8 +10,12 @@
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
+    "apexcharts": "^3.29.0",
+    "gh-pages": "^3.2.3",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
@@ -23,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +52,7 @@
   "devDependencies": {
     "@types/react-query": "^1.2.9",
     "@types/react-router-dom": "^5.3.3",
-    "@types/styled-components": "^5.1.29"
+    "@types/styled-components": "^5.1.29",
+    "@types/react-helmet": "^6.1.4"
   }
 }
