--- a/my-app/package.json
+++ b/my-app/package.json
@@ -19,6 +19,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
     "styled-components": "^6.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -50,9 +51,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.4",
     "@types/react-query": "^1.2.9",
     "@types/react-router-dom": "^5.3.3",
-    "@types/styled-components": "^5.1.29",
-    "@types/react-helmet": "^6.1.4"
+    "@types/styled-components": "^5.1.29"
   }
 }
