--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,11 +11,13 @@
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
     "apexcharts": "^3.29.0",
+    "eslint-plugin-jest-dom": "^5.1.0",
     "gh-pages": "^3.2.3",
     "react": "^18.2.0",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.47.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
@@ -54,6 +56,10 @@
     "@types/react-helmet": "^6.1.4",
     "@types/react-query": "^1.2.9",
     "@types/react-router-dom": "^5.3.3",
-    "@types/styled-components": "^5.1.29"
+    "@types/styled-components": "^5.1.29",
+    "eslint": "^8.52.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "prettier": "^3.0.3"
   }
 }
