--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,6 +14,7 @@
     "gh-pages": "^3.2.3",
     "react": "^18.2.0",
     "react-apexcharts": "^1.3.9",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-query": "^3.39.3",
@@ -51,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.6",
     "@types/react-helmet": "^6.1.4",
     "@types/react-query": "^1.2.9",
     "@types/react-router-dom": "^5.3.3",
